# snipara-mcp-server

./: .dockerignore  ARCHITECTURE.md  BUILD_INFO  CLAUDE.md  Dockerfile  README.md  SELF_HOSTED_ENTERPRISE.md  entrypoint.sh  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: publish.yml
docs/: DEPLOYMENT.md
prisma/: schema.prisma
prisma/migrations/: 20260314_htask_system.sql  20260319_enable_vector.sql  20260422_agent_memory_status.sql  20260423_code_graph_workflow.sql
snipara-mcp/: README.md
snipara-mcp/tests/: test_package_contract.py
src/: __init__.py  auth.py  config.py  db.py  mcp_transport.py  models.py  rlm_engine.py  server.py  usage.py  validation.py
src/api/: deps.py  (+2 more)
tests/: conftest.py  conftest_handlers.py  mcp_contract_surface.py  test_agent_limits.py  test_agent_memory_validation.py  test_api_deps.py  test_auth_failure_rate_limit.py  test_auth_user_keys.py  test_auto_remember.py  test_background_jobs.py  test_benchmark_client.py  test_benchmark_config.py  test_binary_parsers.py  test_code_graph.py  test_code_graph_benchmark.py  test_companion_benchmark.py  test_context_query.py  test_core.py  test_db.py  test_documentation.py  test_embeddings_service.py  test_fastapi_mirror.py  test_graphify_adapter.py  test_handlers.py  test_mcp.py  test_memory_compaction.py  test_middleware.py  test_query_router.py  test_remote_mcp_contract.py  test_repl_context.py  test_scoring.py  test_server.py  test_settings.py  test_shared_context_management.py  test_snipara_mcp_server.py  test_snipara_rlm_tools.py  test_summaries.py  test_tool_recommender.py
(+73 files in other folders)
